-more comments added to the Simple building
-elevators can now be named
-call buttons now light up in groups
-added Schindler MT textures and sounds
-added verbose mode
-control panel can now be reopened by pressing F12
-fixed blank canvas issue on Mac
-elevator modes can now be set from building scripts and the INI file
-fixed ACP mode
-fixed other service modes
-added SetTextureMapping2 command
-brought back the ReverseExtents command and created new planar texture mapper
-added the GetWallExtents and Print commands
-added InterfloorOnTop global parameter and base variable

Version 1.5 (2.0 Alpha 5)
-------------------------
-clicking on shaft doors and elevator doors while holding down shift now causes them to manually open/close
-manually opening shaft doors causes the related floor to turn on if user is
in a shaft or an elevator
-added new buildings
-added support for multiple floor indicators per elevator
-floors can now have floor indicators
-added support for elevator floor beeps
-added support for separate up/down chimes
-added support for per-door textures on elevator/shaft doors
-added elevator door collision sensors
-added last collision indicator to control panel
-added support for call button lighting
-major fixes to the elevator queue and call processing
-fixes to some elevator parameters, where they would error out if used in a different block than the CreateElevator command
-sound support is now optional and will switch off automatically if not available
-some new script checks for valid floor ranges
-added basic glass elevators to the Glass Tower
-simultaneous door movements are now supported
-call button monitor added, to realistically wait for an available elevator during a call
-call button light status can now be changed by shift-clicking the button
-elevator panel buttons now support position offsets
-fixed manual sizing parameters of the panel buttons
-added support for mounting zipfiles into virtual directories