@@ -135,3 +135,25 @@ float DegreesToRadians(float degrees)
 	//convert from degrees to radians
 	return degrees * (pi / 180);
 }
+
+float Min3(float a, float b, float c)
+{
+	//return smallest value
+	if (a <= b && a <= c)
+		return a;
+	if (b <= a && b <= c)
+		return b;
+	if (c <= a && c <= b)
+		return c;
+}
+
+float Max3(float a, float b, float c)
+{
+	//return largest value
+	if (a >= b && a >= c)
+		return a;
+	if (b >= a && b >= c)
+		return b;
+	if (c >= a && c >= b)
+		return c;
+}
